--- a/sass/outils/_variables.scss
+++ b/sass/outils/_variables.scss
@@ -1,11 +1,10 @@
-$primary-color-contrast: #ad5edd;
 $primary-color: #a55cdb;
+$primary-color-contrast: #ad5edd;
 $secondary-color: #FF79DA;
 $third-color: #99E2D0;
-$background-color: #f6f6f6;
+$fonctionnement-card-hover: #F5edff;
+$shadow-color: #eaeaea;
+$nouveau-card-font: #028E6D;
+$background-grey: #f6f6f6;
 $background-localisation: #ebebeb;
 $background-footer: #353535;
-$fonctionnement-hover: #F5edff;
-$font-color: rgb(59, 34, 34);
-$shadow-color: #eaeaea;
-$nouveau-font: #028E6D;
