--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,12 @@
 @import './outils/variables';
-
+@import './outils/mixins';
 @import './base/fonts';
+
+
+/* background loading spinner */
 
 .chargement-background {
   animation: fadeIn 5000ms;
-  -webkit-animation: fadeIn 5000ms;
-  -moz-animation: fadeIn 5000ms;
-  -o-animation: fadeIn 5000ms;
-  -ms-animation: fadeIn 5000ms;
 }
 
 @keyframes fadeIn {
@@ -15,28 +14,9 @@
   100% {opacity:1;}
 }
 
-@-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
+/* création du loader */
 
 .chargement {
-  /* création du loader */
 
   border-top: 10px solid $primary-color;
   border-bottom: 10px solid $secondary-color;
@@ -45,8 +25,6 @@
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  -webkit-animation: spin 1500ms linear;
-  -o-animation: spin 1500ms linear;
   animation: spin 1500ms linear;
   transform: scale(0);
 
@@ -65,14 +43,6 @@
   }
   100% {
         transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes spin {
-  0% {
-      -webkit-transform: rotate(0deg);
-  }
-  100% {
-      -webkit-transform: rotate(360deg);
   }
 }
 
@@ -113,7 +83,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $background-color;
+  background-color: $background-grey;
   padding-bottom: 2rem;
   text-align: center;
 }
@@ -124,18 +94,7 @@ h1 {
 }
 
 .button-explorer {
-  cursor: pointer;
-  border-radius: 30px;
-  padding: 1.2rem;
-  background-color: $secondary-color;
-  box-shadow: inset 0rem 0rem 2rem 1rem $primary-color-contrast;
-  color: white;
-  border: none;
-  font-size: 1rem;
-}
-
-.button-explorer:hover {
-  background-color: rgba(255,121,218,0.7);
+  @include button;
 }
 
 .explorer h1 {
@@ -153,42 +112,39 @@ h1 {
 
 .fonctionnement-card {
   display: flex;
-  background-color: $background-color;
+  justify-content: space-around;
+  width: 13rem;
+  box-shadow: 0.5rem 0.5rem 0.5rem $shadow-color;
+  z-index: 0;
+  position: relative;
+  background-color: $background-grey;
   border-radius: 30px;
-  padding: 1rem 1rem 1rem 0rem;
-  justify-content: space-evenly;
-  width: 14rem;
-  box-shadow:0.5rem 0.5rem 0.5rem $shadow-color;
+  padding: 1rem;
+
   & img {
     width: 20px;
   }
-}
 
-.number {
-  position: absolute;
-  margin-left: -14.5rem;
-  border-radius: 50%;
-  background-color: $primary-color-contrast;
-  text-align: center;
-  width: 15px;
-  height: 15px;
-  padding: 2.5px;
-  color: $font-color;
-  padding-bottom: 0.4rem;
-}
-
-.fonctionnement-card:hover {
-  background-color: $fonctionnement-hover;
-  cursor: pointer;
+  &:hover {
+    background-color: $fonctionnement-card-hover;
+    cursor: pointer;
   
-  img {
+    img {
     filter: invert(46%) sepia(49%) saturate(866%) hue-rotate(231deg) brightness(89%) contrast(91%);;
   }
 }
+}
 
-.fonctionnement-card svg :hover {
-  background-color: $fonctionnement-hover;
-  cursor: pointer;
+.number {
+  border-radius: 50%;
+  background-color: $primary-color-contrast;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  padding: 2.5px;
+  z-index: 1;
+  position: absolute;
+  right: 14.2rem;
 }
 
 .titre-fonctionnement {
@@ -205,6 +161,7 @@ h1 {
     flex-flow: column wrap;
     align-content: center;
   }
+
   .fonctionnement-card {
     display: flex;
     align-content: space-between;
@@ -214,25 +171,25 @@ h1 {
 
 /* restaurants */
 
-.restaurants img {
-  border-radius: 5px 5px 0px 0px;
-  max-width: 400px;
-  width: 100%;
-  max-height: 250px;
-  object-fit: cover;
-}
-
 .restaurants {
-  background-color: $background-color;
+  background-color: $background-grey;
   display: flex;
   flex-flow: row wrap;
   gap: 2rem;
   padding-bottom: 2rem;
   justify-content: center;
+
+  & img {
+    border-radius: 2rem 2rem 0rem 0rem;
+    max-width: 400px;
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover;
+  }
 }
 
 .titre-restaurant {
-  background-color: $background-color;
+  background-color: $background-grey;
   margin-bottom: 0rem;
   padding: 2rem;
 }
@@ -246,11 +203,14 @@ h1 {
   margin-left: 1rem;
   margin-right: 1rem;
   position: relative;
+  width: 375px;
 
   &:hover {
     cursor: pointer;
   }
 }
+
+/* nouveau */
 
 .image p {
   position: absolute;
@@ -259,7 +219,7 @@ h1 {
   padding: 0.4rem;
   border-radius: 4px;
   font-weight: bold;
-  color: $nouveau-font;
+  color: $nouveau-card-font;
   color: #028E6D;
   right: 10px;
 }
@@ -268,67 +228,31 @@ h1 {
   padding: 2px 16px;
 }
 
-.container h2 {
-  font-size: large;
-}
-
-.container img {
-  height: 16px;
-  width: 16px;
-}
-
-a .img {
-  width: 375px;
-}
-
 /* coeur */
 
 .heart {
+  @include hearts;
   position: absolute;
   right: 1rem;
   bottom: 3rem;
-
-  & .bg {
-    z-index: 1;
-    position: absolute;
-    font-size: 30px; 
-  }
-  
-  & .no-bg {
-    
-    font-size: 30px;
-    z-index: 0;
-    transform: scale(0);
-    background: linear-gradient($primary-color, $secondary-color);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  
-  &:hover .no-bg {
-    transform-origin: bottom;
-    transform: scale(1);
-    transition: 0.3s;
-  }
 }
 
-/* pied de page */
+/* footer */
 
 footer {
   display: flex;
   flex-direction: column;
   background-color: $background-footer;
-  color: $font-color;
   height: 12rem;
-}
+  & a {
+    color: white;
+    text-decoration: none;
+  }
 
-footer a {
-  color: white;
-  text-decoration: none;
-}
-
-footer img {
-  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(310deg) brightness(107%) contrast(101%);
-  height: 17px;
+  & img {
+    filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(310deg) brightness(107%) contrast(101%);
+    height: 17px;
+  }
 }
 
 .footer-line {
@@ -344,6 +268,4 @@ footer img {
   footer {
       align-items: center;
   }
-} 
-
-/*# sourceMappingURL=style.css.map */
+}
