--- a/sass/outils/_mixins.scss
+++ b/sass/outils/_mixins.scss
@@ -33,7 +33,8 @@
     z-index: 0;
     transform: scale(0);
     background: linear-gradient($primary-color, $secondary-color);
-    background-clip: text;
+    background-clip: border-box;
+    -webkit-background-clip: text;
     color: transparent;
   }
 
