--- a/sass/outils/_mixins.scss
+++ b/sass/outils/_mixins.scss
@@ -13,7 +13,7 @@
 
   &:hover {
     filter: brightness(1.25);
-    box-shadow: 0px 0px 18px 0px rgb(0 0 0 / 80%);
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.8);
   }
 }
 
@@ -22,23 +22,26 @@
 @mixin hearts {
   cursor: pointer;
 
-  & .bg {
+  & .empty {
     z-index: 1;
     position: absolute;
     font-size: 30px; 
   }
 
-  & .no-bg {
+  & .black {
     font-size: 30px;
     z-index: 0;
+    /* modifie l'espace de coordonnées utilisé pour la mise en forme visuelle */
     transform: scale(0);
+    /* dégradé de 2 couleurs */
     background: linear-gradient($primary-color, $secondary-color);
+    /* façon dont l'arrière-plan s'étend sous la boîte de bordure */
     background-clip: border-box;
     -webkit-background-clip: text;
     color: transparent;
   }
 
-  &:hover .no-bg {
+  &:hover .black {
     transform-origin: bottom;
     transform: scale(1);
     transition: 0.3s;
