--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* boutons */
 /* coeur */
 /* police */
@@ -73,21 +74,24 @@ header {
 .heart {
   cursor: pointer;
 }
-.heart .bg {
+.heart .empty {
   z-index: 1;
   position: absolute;
   font-size: 30px;
 }
-.heart .no-bg {
+.heart .black {
   font-size: 30px;
   z-index: 0;
+  /* modifie l'espace de coordonnées utilisé pour la mise en forme visuelle */
   transform: scale(0);
+  /* dégradé de 2 couleurs */
   background: linear-gradient(#a55cdb, #FF79DA);
+  /* façon dont l'arrière-plan s'étend sous la boîte de bordure */
   background-clip: border-box;
   -webkit-background-clip: text;
   color: transparent;
 }
-.heart:hover .no-bg {
+.heart:hover .black {
   transform-origin: bottom;
   transform: scale(1);
   transition: 0.3s;
@@ -110,12 +114,12 @@ header {
   display: flex;
   border-radius: 15px;
   box-shadow: 0px 4px 8px #eaeaea;
+  /* gérer le dépassement du contenu de l'élément */
   overflow: hidden;
   cursor: pointer;
-  -webkit-animation: fadein 2s;
-          animation: fadein 2s;
 }
 .row-plate__column {
+  /* permet d'afficher une ellipse */
   text-overflow: ellipsis;
   overflow: hidden;
   flex: 1;
@@ -124,6 +128,7 @@ header {
   margin: 0;
   text-overflow: ellipsis;
   overflow: hidden;
+  /* façon dont les blancs sont gérés au sein de l'élément */
   white-space: nowrap;
 }
 .row-plate__secondline {
@@ -144,6 +149,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* durée de l'animation */
   transition-duration: 400ms;
 }
 .row-plate:hover .row-plate__box {
@@ -157,10 +163,12 @@ header {
   align-items: center;
   justify-content: center;
   border-radius: 50px;
+  /* rotation de la coche */
   transform: rotate(180deg);
   transition-duration: 400ms;
 }
 .row-plate:hover .row-plate__wrap {
+  /* pour que la coche soit à l'endroit */
   transform: rotate(0);
 }
 .row-plate__check {
