--- a/sass/style-menu.scss
+++ b/sass/style-menu.scss
@@ -75,18 +75,18 @@ header {
 }
 
 .row-plate {
-
   margin: 0.5rem;
   background-color: white;
   padding: 1rem;
   display: flex;
   border-radius: 15px;
   box-shadow: 0px 4px 8px $shadow-color;
+  /* gérer le dépassement du contenu de l'élément */
   overflow: hidden;
   cursor: pointer;
-  animation: fadein 2s;
 
   &__column {
+    /* permet d'afficher une ellipse */
     text-overflow: ellipsis;
     overflow: hidden;
     flex: 1;
@@ -96,6 +96,7 @@ header {
     margin: 0;
     text-overflow: ellipsis;
     overflow: hidden;
+    /* façon dont les blancs sont gérés au sein de l'élément */
     white-space: nowrap;
   }
   
@@ -111,7 +112,6 @@ header {
     display: flex;
     align-self: flex-end;
   }
-
   &__box {
     background-color: $third-color;
     margin: -1rem -5rem -1rem 1rem;
@@ -119,13 +119,12 @@ header {
     display: flex;
     align-items: center;
     justify-content:center;
+    /* durée de l'animation */
     transition-duration: 400ms;
   }
-
   &:hover &__box {
     margin-right: -1rem;
   }
-
   &__wrap {
     height: 1.5rem;
     width: 1.5rem;
@@ -134,14 +133,14 @@ header {
     align-items: center;
     justify-content: center;
     border-radius: 50px;
+    /* rotation de la coche */
     transform: rotate(180deg);
     transition-duration: 400ms;
   }
-
   &:hover &__wrap {
+    /* pour que la coche soit à l'endroit */
     transform: rotate(0);
   }
-
   &__check {
     color: $third-color;
   }
