--- a/sass/style-menu.scss
+++ b/sass/style-menu.scss
@@ -84,6 +84,7 @@ header {
   /* gérer le dépassement du contenu de l'élément */
   overflow: hidden;
   cursor: pointer;
+  animation: fadein 2s;
 
   &__column {
     /* permet d'afficher une ellipse */
@@ -112,6 +113,7 @@ header {
     display: flex;
     align-self: flex-end;
   }
+
   &__box {
     background-color: $third-color;
     margin: -1rem -5rem -1rem 1rem;
@@ -151,6 +153,30 @@ header {
     }
     to {
         opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* sur Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* sur Safari et Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* sur Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
     }
 }
 }
